--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.2.3",
-        "echarts": "^5.4.3",
+        "apexcharts": "^3.41.1",
         "pinia": "^2.1.4",
         "vue": "^3.2.36",
-        "vue-echarts": "^6.6.1",
+        "vue-apexcharts": "^1.6.2",
         "vue-loader": "^17.0.1",
         "vue-router": "^4.2.4"
     }
