--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vue": "^3.2.36",
         "vue-apexcharts": "^1.6.2",
         "vue-loader": "^17.0.1",
-        "vue-router": "^4.2.4"
+        "vue-router": "^4.2.4",
+        "vue3-apexcharts": "^1.4.4"
     }
 }
